# sawyer_cloth_flatten

./: CMakeLists.txt  README.md  package.xml  setup.py
action/: ApplyDisplacement.action  MoveToPosition.action  PickAndMoveCloth.action
cfg/: RealSenseHandler.cfg
scripts/: realsense_handler_node  sawyer_cloth_flatten  sawyer_controller_node
src/sawyer_cloth_flatten/: realsense_handler.py  sawyer_controller.py
srv/: Get3DPointFromPixel.srv  GetHighestPositionOfCloth.srv
